Revision history for {{$dist->name}}

{{$NEXT}}
	Renamed distmeta to cpan_meta (and added cm shortcut)

0.001     2012-01-15 02:42:09 Europe/Berlin