@@ -14,6 +14,7 @@ File::Temp = 0.22
 File::Find::Object = 0.2.3
 Module::Extract::Namespaces = 0.14
 DateTime::Format::Epoch = 0.13
+Dist::Metadata = 0.922
 
 [Prereqs / TestRequires]
 Test::More = 0.90
